--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Image</title>
 </head>
-<body style="background-image: url(mango-seamless-pattern_7737-1217.avif);">
+<body style="background-image: url(https://img.freepik.com/premium-vector/mango-seamless-pattern_7737-1217.jpg?semt=ais_hybrid);">
     <h1 style="color: deeppink; text-align: center;">MANGO</h1>
     <img width="200px" src="https://exoticflora.in/cdn/shop/products/1_5ac8a2cb-21a4-4a07-97dc-f3ad1ae36ea4.jpg?v=1499122165" alt="">
     <h2 style="color: darkred;">Mango, India's national fruit and a beloved tropical fruit, is known as the "king of fruits" <br> And is a staple in Indian cuisine, enjoyed in various forms from fresh to pickles and desserts. </h2>
